--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "18.x"
   },
+  "resolutions": {
+    "strip-ansi": "^6.0.1"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
